# minesweeper

./: CMakeLists.txt  Makefile
include/: minesweeper.h
src/: main.c  minesweeper.c
